log
Thu 09 May 2024 01:05:47 AM UTC: 
 tests:  1|8
total_score: 0/70
e47873d
Thu 09 May 2024 03:01:55 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5a007b5
Thu 09 May 2024 03:02:46 AM UTC: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:20: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |         TreeNode * parent = NULL;
      |                    ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f467aaa
